# Stockfly

./: .gitignore  CMakeLists.txt  game.cpp  game_loop.cpp  gui.py  readme.md  socket_test.cpp  test.cpp
src/: bishop.cpp  board.cpp  board.h  generic_ai.h  king.cpp  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  ply.cpp  ply.h  queen.cpp  queen.h  random_ai.cpp  random_ai.h  rook.cpp  rook.h  stockfly.cpp  stockfly.h  utils.cpp  utils.h
src/ai/: ai.h  random_ai.cpp  random_ai.h  stockfly.cpp  stockfly.h
src/pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  pawn.cpp  piece.cpp  piece.h  queen.cpp  rook.cpp
